[workspace]
resolver = "2"
members = ["hiqlite"]
exclude = ["examples"]

[workspace.package]
version = "0.6.0-20250410"
edition = "2021"
license = "Apache-2.0"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org"]

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[workspace.dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["http2", "tokio"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
axum-server = { version = "0.7.1", features = [
    "tls-rustls",
    "tls-rustls-no-provider",
] }
bincode = { version = "2", features = ["serde"] }
byteorder = "1.4.3"
bytes = "1.6.0"
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "clock",
    "now",
    # The default serde impl for chrono does not match the one from rusqlite.
    #"serde",
] }
clap = { version = "4.1.11", features = ["derive", "env"] }
cron = { version = "0.15" }
cryptr = { version = "0.5.1", features = ["s3"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
deadpool = { version = "0.12.1", features = ["rt_tokio_1"] }
dotenvy = "0.15.7"
eventsource-client = "0.15"
fastwebsockets = { version = "0.10.0", features = [
    "upgrade",
    "with_axum",
    "unstable-split",
] }
flume = "0.11.0"
futures-util = "0.3.30"
getrandom = { version = "0.3", features = ["std"] }
hex = "0.4.3"
home = "0.5.9"
hostname = "0.4.0"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["client", "http2"] }
hyper-util = { version = "0.1.6", features = ["client", "http2", "tokio"] }
mime_guess = "2.0.5"
num-traits = "0.2.19"
num-derive = "0.4.2"
openraft = { version = "0.9.18", features = ["serde", "storage-v2"] }
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
rocksdb = { version = "0.23.0", default-features = true, features = ["snappy"] }
rusqlite = { version = "0.34", features = [
    "backup",
    "bundled",
    "chrono",
    "column_decltype",
    "serde_json",
] }
rust-embed = { version = "8.5.0", features = [] }
rustls = { version = "0.23.12", features = ["ring"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
serde_rusqlite = "0.38"
sha2 = { version = "0.10.8", features = [] }
spow = { version = "0.4.0", features = ["server"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.43.1", features = ["fs", "sync", "rt-multi-thread"] }
tokio-rustls = { version = "0.26.0", features = ["ring"] }
tower = { version = "0.5", features = [] }
tower-http = { version = "0.6.0", features = [
    "set-header",
    "sensitive-headers",
    "util",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v7"] }
webpki-roots = { version = "0.26.3" }

# make minimal versions happy
lazy_static = "1.0.2"
lz4-sys = "1.9.5"
rust_decimal = "1.15"
tower-layer = "0.3.3"
tower-service = "0.3.3"
