[workspace]
resolver = "2"
members = ["hiqlite", "hiqlite-derive", "hiqlite-wal"]
exclude = ["examples"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org"]

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[patch.crates-io]
#cryptr = { path = "../cryptr" }
#cryptr = { git = "https://github.com/sebadob/cryptr" }
#s3-simple = { path = "../s3-simple" }

[workspace.dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["http2", "tokio"] }
axum-extra = { version = "0.12", features = ["cookie"] }
axum-server = { version = "0.8", features = [
    "tls-rustls",
    "tls-rustls-no-provider",
] }
bincode = { version = "2", features = ["serde"] }
byteorder = "1.4.3"
bytes = "1.11.1"
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "clock",
    "now",
    # The default serde impl for chrono does not match the one from rusqlite.
    #"serde",
] }
clap = { version = "4.1.11", features = ["derive", "env"] }
crc = "3.3.0"
cron = { version = "0.16" }
cryptr = { version = "0.10", features = ["s3"] }
ctrlc = { version = "3.4.4", features = ["termination"] }
deadpool = { version = "0.13", features = ["rt_tokio_1"] }
dotenvy = "0.15.7"
# TODO
#  The new version requires weird 3rd party dependencies or lots of manual work for the Transport.
#  This development is annoying and not worth it -> migrate to WebSocket in the future.
eventsource-client = { version = "0.16" }
fastwebsockets = { version = "0.10.0", features = [
    "upgrade",
    "with_axum",
    "unstable-split",
] }
flume = "0.12"
fs4 = { version = "0.13.1", features = ["sync"] }
futures-util = "0.3.30"
getrandom = { version = "0.4", features = ["std"] }
hex = "0.4.3"
home = "0.5.9"
hostname = "0.4.0"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["client", "http2"] }
hyper-util = { version = "0.1.6", features = ["client", "http2", "tokio"] }
memmap2 = "0.9.5"
mime_guess = "2.0.5"
openraft = { version = "0.9.21", features = ["serde", "storage-v2"] }
rcgen = "0.14.7"
reqwest = { version = "0.13", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "rustls-no-provider",
] }
rusqlite = { version = "0.39", features = [
    "backup",
    "bundled",
    "cache",
    "chrono",
    "modern_sqlite",
    "column_decltype",
    "csvtab",
    "functions",
    "load_extension",
    "serde_json",
    "series",
    "url",
    "uuid",
    "vtab",
] }
rust-embed = { version = "8.5.0", features = [] }
rustls = { version = "0.23.37", default-features = false, features = [
    "logging", "prefer-post-quantum", "std", "tls12", "ring"
] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
serde_rusqlite = "0.42"
sha2 = { version = "0.11", features = [] }
spow = { version = "0.6", features = ["server"] }
thiserror = "2"
thread-priority = "3.0.0"
tikv-jemallocator = "0.6.0"
time = "0.3.47"
tokio = { version = "1.43.1", features = ["fs", "sync", "rt-multi-thread"] }
tokio-rustls = { version = "0.26.0", features = ["ring"] }
toml = "1"
tower = { version = "0.5", features = [] }
tower-http = { version = "0.6.0", features = [
    "set-header",
    "sensitive-headers",
    "util",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.4"
uuid = { version = "1.8.0", features = ["v7"] }
webpki-root-certs = { version = "1" }

# make minimal versions happy
lazy_static = "1.0.2"
lz4-sys = "1.9.5"
rust_decimal = "1.15"
tower-layer = "0.3.3"
tower-service = "0.3.3"

# Necessary to fix security issues in current versions.
aws-lc-sys = "0.39"
aws-lc-rs = "1.16.2"
quinn-proto = "0.11.14"
rkyv = "0.7.46"
