[package]
name = "hiqlite-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.85.1"
categories = ["database", "caching"]
keywords = ["database", "sql", "sqlite", "raft", "cache"]
description = "Macros for Hiqlite"
repository = "https://github.com/sebadob/hiqlite"

[dependencies]
hiqlite = { version = "0.6.0", path = "../hiqlite" }

rust-embed.workspace = true
