[package]
name = "hiqlite-macros"
version = "0.13.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.88"
categories = ["database", "caching"]
keywords = ["database", "sql", "sqlite", "raft", "cache"]
description = "Macros for Hiqlite"
repository = "https://github.com/sebadob/hiqlite"

[dependencies]
#hiqlite = { version = "0.12" }
hiqlite = { path = "../hiqlite" }
hiqlite-derive = { path = "../hiqlite-derive" }

rust-embed.workspace = true
