[package]
name = "hiqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.80.0"
categories = ["database", "caching"]
keywords = ["database", "sql", "sqlite", "raft", "cache"]
description = "Hiqlite - highly-available, embeddable, raft-based SQLite + cache"
readme = "../README.md"
repository = "https://github.com/sebadob/hiqlite"

[package.metadata.docs.rs]
features = ["cache", "dashboard", "dlock", "shutdown-handle", "sqlite"]

[features]
default = ["auto-heal", "backup", "sqlite"]

auto-heal = []
backup = ["cron", "s3"]
# TODO we should not need the "openraft/loosen-follower-log-revert" here -> conflict in self-healing tests
cache = ["openraft/loosen-follower-log-revert"]
dashboard = [
    "dep:argon2",
    "dep:axum-extra",
    "dep:cryptr",
    "dep:mime_guess",
    "dep:tower",
    "dep:tower-http",
    "sqlite",
]
dlock = ["cache"]
full = ["auto-heal", "backup", "cache", "dashboard", "dlock", "s3", "shutdown-handle", "sqlite", "webpki-roots"]
listen_notify = ["dep:futures-util", "dep:tokio-stream", "cache"]
#io-uring = ["rocksdb/io-uring"]
#jemalloc = ["rocksdb/jemalloc"]
s3 = ["dep:cryptr", "backup"]
server = ["dep:clap", "dep:home", "dep:tracing-subscriber", "full", "tokio/macros"]
shutdown-handle = ["dep:ctrlc"]
sqlite = ["dep:deadpool", "dep:rusqlite", "dep:serde_rusqlite"]
webpki-roots = ["dep:webpki-roots", "reqwest/rustls-tls-webpki-roots"]

[dependencies]
argon2 = { workspace = true, optional = true }
axum.workspace = true
axum-extra = { workspace = true, optional = true }
axum-server.workspace = true
bincode.workspace = true
byteorder.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { workspace = true, optional = true }
cron = { workspace = true, optional = true }
cryptr = { workspace = true, optional = true }
ctrlc = { workspace = true, optional = true }
deadpool = { workspace = true, optional = true }
dotenvy.workspace = true
fastwebsockets.workspace = true
flume.workspace = true
futures-util = { workspace = true, optional = true }
getrandom.workspace = true
hex.workspace = true
hostname.workspace = true
home = { workspace = true, optional = true }
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
mime_guess = { workspace = true, optional = true }
num-traits.workspace = true
num-derive.workspace = true
openraft.workspace = true
# TODO not competitive for logs right now, maybe get rid of it in the future
#redb.workspace = true
reqwest.workspace = true
rocksdb.workspace = true
rusqlite = { workspace = true, optional = true }
rust-embed.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_rusqlite = { workspace = true, optional = true }
sha2.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
uuid.workspace = true
webpki-roots = { workspace = true, optional = true }

# make minimal versions happy
lazy_static.workspace = true
lz4-sys.workspace = true

[build-dependencies]

[dev-dependencies]
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
