[package]
name = "hiqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version = "1.85.1"
categories = ["database", "caching"]
keywords = ["database", "sql", "sqlite", "raft", "cache"]
description = "Hiqlite - highly-available, embeddable, raft-based SQLite + cache"
readme = "../README.md"
repository = "https://github.com/sebadob/hiqlite"

[lib]
doctest = false

[package.metadata.docs.rs]
all-features = true

[features]
default = ["auto-heal", "backup", "sqlite"]

auto-heal = ["hiqlite-wal/auto-heal"]
backup = ["dep:cron", "s3", "sqlite"]
# TODO check why we need the "openraft/loosen-follower-log-revert" here -> conflict in self-healing tests
cache = ["openraft/loosen-follower-log-revert"]
dashboard = [
    "dep:argon2",
    "dep:axum-extra",
    "dep:mime_guess",
    "dep:spow",
    "dep:tower",
    "dep:tower-http",
    "sqlite",
]
dlock = ["cache"]
full = [
    "auto-heal",
    "backup",
    "cache",
    "dashboard",
    "dlock",
    "listen_notify",
    "s3",
    "shutdown-handle",
    "sqlite",
    "webpki-roots",
]
jemalloc = ["dep:tikv-jemallocator"]
listen_notify = [
    "dep:eventsource-client",
    "listen_notify_local"
]
listen_notify_local = [
    "dep:futures-util",
    "cache"
]
migrate-rocksdb = ["dep:rocksdb", "hiqlite-wal/migration"]
rocksdb = ["dep:rocksdb"]
s3 = ["backup"]
server = [
    "dep:clap",
    "dep:home",
    "dep:tracing-subscriber",
    "full",
    "tokio/macros",
]
shutdown-handle = ["dep:ctrlc"]
sqlite = [
    "dep:deadpool",
    "dep:rusqlite",
    "dep:serde_rusqlite",
]
webpki-roots = [
    "dep:webpki-roots",
    "reqwest/rustls-tls-webpki-roots",
]

[dependencies]
hiqlite-wal = { path = "../hiqlite-wal" }

argon2 = { workspace = true, optional = true }
axum.workspace = true
axum-extra = { workspace = true, optional = true }
axum-server.workspace = true
bincode.workspace = true
byteorder.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { workspace = true, optional = true }
cron = { workspace = true, optional = true }
cryptr = { workspace = true }
ctrlc = { workspace = true, optional = true }
deadpool = { workspace = true, optional = true }
dotenvy.workspace = true
eventsource-client = { workspace = true, optional = true }
fastwebsockets.workspace = true
flume.workspace = true
futures-util = { workspace = true, optional = true }
getrandom.workspace = true
hex.workspace = true
hostname.workspace = true
home = { workspace = true, optional = true }
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
mime_guess = { workspace = true, optional = true }
openraft.workspace = true
reqwest.workspace = true
rocksdb = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
rust-embed.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_rusqlite = { workspace = true, optional = true }
sha2.workspace = true
spow = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
uuid.workspace = true
webpki-roots = { workspace = true, optional = true }

# make minimal versions happy
lazy_static.workspace = true
lz4-sys.workspace = true
rust_decimal.workspace = true
tower-layer.workspace = true
tower-service.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

console-subscriber = { version = "0.4.1" }
[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util", "tracing"] }
tokio-test = "0.4.4"
tracing-subscriber.workspace = true
