[package]
name = "hiqlite_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "hiqlite"
path = "src/main.rs"

[dependencies]
hiqlite = { path = "../hiqlite" }

clap = { version = "4.1.11", features = ["derive", "env"] }
serde = "1.0.204"
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tokio = { version = "1.38.1", features = ["fs", "macros", "sync", "rt-multi-thread"] }
