[package]
name = "hiqlite_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "hiqlite"

[[bin]]
name = "hiqlite"
path = "src/main.rs"

[dependencies]
hiqlite = { path = "../hiqlite", features = ["full"] }

argon2.workspace = true
clap.workspace = true
cryptr.workspace = true
home.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
