[package]
name = "basic-sqlite"
version = "0.1.0"
edition = "2021"

#[[example]]
#name = "basic-sqlite"

[dependencies]
hiqlite = { path = "../../hiqlite", default-features = false, features = ["auto-heal", "auto-heal-logs", "sqlite"] }

clap = { version = "4.1.11", features = ["derive", "env"] }
rust-embed = { version = "8.5.0", features = ["compression"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.35.1", features = ["fs", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
