[package]
name = "cache-only"
version = "0.1.0"
edition = "2021"

[dependencies]
hiqlite = { path = "../../hiqlite", default-features = false, features = ["cache", "toml"] }

serde = { version = "1.0.203", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.43.1", features = ["fs", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

