[package]
name = "walkthrough"
version = "0.1.0"
edition = "2021"

[dependencies]
hiqlite = { path = "../../hiqlite", features = ["cache", "dlock", "listen_notify", "shutdown-handle"] }
hiqlite-macros = { path = "../../hiqlite-macros" }

clap = { version = "4.1.11", features = ["derive", "env"] }
serde = { version = "1.0.203", features = ["derive"] }
strum = "0.27.1"
tokio = { version = "1.43.1", features = ["fs", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
